--- a/resources/css/tool.css
+++ b/resources/css/tool.css
@@ -24,7 +24,6 @@ ul.step-tabs li {
 }
 
 .nova-wizard label {
-  
   width: 240px;
   font-size: 13pt;
 }
@@ -43,6 +42,13 @@ ul.step-tabs li {
   padding-top: 4rem;
 }
 
+.nova-wizard .step-wrapper h1 {
+  font-size: 18pt;
+  margin-bottom: 3rem;
+  padding-left: 2rem;
+}
+
+
 .nova-wizard #progress-container {
   margin-top: -1px;
   width: 100%;
@@ -55,4 +61,23 @@ ul.step-tabs li {
   height: 100%;
   background-color: rgba(var(--colors-primary-500), 0.8);
   border-radius: 4px;
+}
+
+.nova-wizard.finished #progress-bar {
+  background-color: rgba(var(--colors-green-500), 0.4);
+}
+
+.nova-wizard.finished div.finished {
+  padding: 6rem;
+  padding-top: 10rem;
+  text-align: center;
+  font-size: 22pt;
+}
+
+.nova-wizard .reset-button {
+  text-align: center;
+}
+
+.nova-wizard .reset-button .button {
+  float: none;
 }
